feat: Integra Google Gemini AI com segurança
- Adiciona SDK @google/generative-ai
- Implementa módulo gemini.ts com funções de IA
- Cria endpoints /api/gemini/* para chat, análise e compliance
- Adiciona .env ao .gitignore para proteger chaves API
- Remove qualquer exposição de chaves API dos arquivos
- Documenta integração e setup em GEMINI_API.md e GEMINI_SETUP.md
- Adiciona SECURITY.md com boas práticas
- Atualiza README com recursos de IA

--- a/backend/.env
+++ b/backend/.env
@@ -20,6 +20,9 @@ INFURA_GAS_API_URL=
 ELIZAOS_API_KEY=
 ELIZAOS_BASE_URL=
 
+# Google Gemini AI
+GEMINI_API_KEY=
+
 # SMTP (Notificações)
 SMTP_HOST=
 SMTP_PORT=
