--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "ethers": "^6.13.0",
     "axios": "^1.7.7",
     "moralis": "^2.27.2",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "@google/generative-ai": "^0.21.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
