📝 docs: Atualizar projeto com endereços dos contratos Sepolia
- Adicionar endereços deployados no README.md e STATUS_PROJETO_ATUAL.md
- Criar arquivo CONTRATOS_DEPLOYADOS.md com referência rápida
- Criar arquivo CHANGELOG.md documentando histórico do projeto
- Atualizar .env.example frontend/backend com endereços Sepolia
- Criar contracts.ts config centralizada (frontend/backend)
- Atualizar frontend/app/api/streams/route.ts para usar Sepolia
- Atualizar backend/src/events.ts para importar config centralizada
- Adicionar seção de contratos no docs/API.md

Contratos Sepolia:
- StreamPayCore: 0x74ef273eCdc2BBA1Ddf69a2106122d43424F3c0C
- LiquidityPool: 0x896171C52d49Ff2e94300FF9c9B2164aC62F0Edd
- PoolManager: 0x0F71393348E7b021E64e7787956fB1e7682AB4A8
- SwapRouter: 0x9f3d42feC59d6742CC8dC096265Aa27340C1446F

Deploy: 15/12/2025 06:05:36 UTC
Chain ID: 11155111 (Sepolia)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,11 +34,11 @@ ETHERSCAN_API_KEY=your-etherscan-api-key
 CHAINLINK_API_KEY=your-chainlink-api-key
 GEMINI_API_KEY=your-gemini-api-key
 
-# ===== SMART CONTRACTS =====
-STREAM_PAY_CORE_ADDRESS=0x0000000000000000000000000000000000000000
-LIQUIDITY_POOL_ADDRESS=0x0000000000000000000000000000000000000000
-POOL_MANAGER_ADDRESS=0x0000000000000000000000000000000000000000
-SWAP_ROUTER_ADDRESS=0x0000000000000000000000000000000000000000
+# ===== SMART CONTRACTS (Sepolia Testnet) =====
+STREAM_PAY_CORE_ADDRESS=0x74ef273eCdc2BBA1Ddf69a2106122d43424F3c0C
+LIQUIDITY_POOL_ADDRESS=0x896171C52d49Ff2e94300FF9c9B2164aC62F0Edd
+POOL_MANAGER_ADDRESS=0x0F71393348E7b021E64e7787956fB1e7682AB4A8
+SWAP_ROUTER_ADDRESS=0x9f3d42feC59d6742CC8dC096265Aa27340C1446F
 
 # ===== UNISWAP V3 =====
 UNISWAP_V3_ROUTER=0xE592427A0AEce92De3Edee1F18E0157C05861564
