--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,10 @@
 NEXT_PUBLIC_API_URL=http://localhost:3000
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
-NEXT_PUBLIC_CHAIN_ID=42161 # Arbitrum One (exemplo)
+NEXT_PUBLIC_CHAIN_ID=11155111 # Sepolia testnet
+
+# Smart Contract Addresses (Sepolia Testnet)
+NEXT_PUBLIC_STREAM_PAY_CORE_ADDRESS=0x74ef273eCdc2BBA1Ddf69a2106122d43424F3c0C
+NEXT_PUBLIC_LIQUIDITY_POOL_ADDRESS=0x896171C52d49Ff2e94300FF9c9B2164aC62F0Edd
+NEXT_PUBLIC_POOL_MANAGER_ADDRESS=0x0F71393348E7b021E64e7787956fB1e7682AB4A8
+NEXT_PUBLIC_SWAP_ROUTER_ADDRESS=0x9f3d42feC59d6742CC8dC096265Aa27340C1446F
+NEXT_PUBLIC_TOKEN_ADDRESS=0x1c7D4B196Cb0C7B01d743Fbc6116a902379C7238
