--- a/backend/package.json
+++ b/backend/package.json
@@ -15,35 +15,38 @@
     "lint": "eslint src --ext .ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.16.3",
-    "ethers": "^6.13.0",
-    "axios": "^1.7.7",
-    "jsonwebtoken": "^9.0.2",
-    "zod": "^3.22.4",
-    "dotenv": "^16.4.5",
-    "cors": "^2.8.5",
-    "morgan": "^1.10.0",
-    "moralis": "^2.27.2",
     "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^5.8.0",
+    "@sentry/node": "^7.85.0",
+    "@sentry/tracing": "^7.85.0",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "moralis": "^2.27.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.16.3",
     "socket.io": "^4.7.2",
     "ws": "^8.15.0",
-    "@sentry/node": "^7.85.0",
-    "@sentry/tracing": "^7.85.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "ts-node": "^10.9.2",
-    "typescript": "^5.0.0",
-    "@types/node": "^20.14.0",
-    "@types/express": "^4.17.21",
-    "@types/pg": "^8.11.0",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "jest": "^29.7.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.14.0",
+    "@types/pg": "^8.11.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^29.7.0",
+    "prisma": "^5.8.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.1.1",
-    "prisma": "^5.8.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.0.0"
   }
 }
