--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,6 +27,9 @@ MAINNET_RPC_URL=https://eth-mainnet.g.alchemy.com/v2/YOUR-API-KEY
 SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR-API-KEY
 ARBITRUM_RPC_URL=https://arb1.arbitrum.io/rpc
 OPTIMISM_RPC_URL=https://mainnet.optimism.io
+ETH_RPC_URL=https://sepolia.infura.io/v3/YOUR-PROJECT-ID
+NETWORK=sepolia
+PRIVATE_KEY=your-private-key
 
 # ===== EXTERNAL APIs =====
 MORALIS_API_KEY=your-moralis-api-key
