--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,6 @@
 NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_BACKEND_URL=http://localhost:3001
+NEXT_PUBLIC_ELIZA_URL=http://localhost:3000
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_CHAIN_ID=11155111 # Sepolia testnet
 
