--- a/backend/package.json
+++ b/backend/package.json
@@ -19,34 +19,43 @@
     "@prisma/client": "^5.8.0",
     "@sentry/node": "^7.85.0",
     "@sentry/tracing": "^7.85.0",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.0",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "moralis": "^2.27.2",
     "morgan": "^1.10.0",
     "pg": "^8.16.3",
+    "qrcode": "^1.5.4",
     "socket.io": "^4.7.2",
+    "speakeasy": "^2.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ws": "^8.15.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.8",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.0",
     "@types/pg": "^8.11.0",
+    "@types/qrcode": "^1.5.6",
+    "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
     "prisma": "^5.8.0",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.0.0"
+    "typescript": "^5.9.3"
   }
 }
