--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.27.1",
     "@hookform/resolvers": "^5.2.2",
+    "@tanstack/react-query": "^5.90.12",
     "@types/jest": "^29.5.8",
+    "@wagmi/connectors": "^7.0.2",
+    "@web3modal/wagmi": "^5.1.11",
     "axios": "^1.13.2",
     "ethers": "^6.16.0",
     "jest": "^29.7.0",
@@ -23,16 +26,16 @@
     "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.9.6",
     "swr": "^2.3.7",
-    "viem": "^1.0.0",
-    "wagmi": "^1.0.0",
+    "viem": "^2.42.1",
+    "wagmi": "^2.19.5",
     "whatwg-fetch": "^3.6.20",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-private-methods": "^7.25.9",
-    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.26.0",
