--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^5.8.0",
     "@sentry/node": "^7.85.0",
+    "@sentry/profiling-node": "^10.32.1",
     "@sentry/tracing": "^7.85.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
@@ -31,9 +32,11 @@
     "jsonwebtoken": "^9.0.2",
     "moralis": "^2.27.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
     "socket.io": "^4.7.2",
+    "socket.io-client": "^4.8.3",
     "speakeasy": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -47,6 +50,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.0",
+    "@types/nodemailer": "^7.0.5",
     "@types/pg": "^8.11.0",
     "@types/qrcode": "^1.5.6",
     "@types/speakeasy": "^2.0.10",
