--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "babel-jest": "^30.2.0",
     "babel-loader": "^9.2.1",
     "eslint": "^8.0.0",
+    "eslint-config-next": "16.1.1",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "ts-jest": "^29.4.5",
