--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -10,6 +10,7 @@
     "compile": "hardhat compile",
     "deploy:sepolia": "hardhat run scripts/deploy.js --network sepolia",
     "deploy:mumbai": "hardhat run scripts/deploy.js --network polygon_mumbai",
+    "deploy:mainnet": "hardhat run scripts/deploy.js --network polygon_mainnet",
     "setup:sepolia": "bash scripts/setup-sepolia.sh"
   },
   "devDependencies": {
