--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "npm-run-all": "^4.1.5",
     "jest": "^29.7.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "next": "^14.2.33"
+  }
 }
